test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-nil.good
assign-nonnil-shared-from-oknil-nil.chpl:8: error: type mismatch in assignment from nil to shared MyClass
